fxp-app/main/default/objects/InstanceTypeOverride__mdt/InstanceTypeOverride__mdt.object-meta.xml
<CustomObject>
    <description>Allows developers to override the standard type names (i.e.: &lt;Contract Type Name&gt;.InheritedSharingImplementation) used by InstancesSource.</description>
    <label>Instance Type Override</label>
    <pluralLabel>Instance Type Overrides</pluralLabel>
</CustomObject>