fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/BuilderToUse__c.field-meta.xml
<CustomField>
    <fullName>BuilderToUse__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <description>The Standard Builder tries to create an instance of the Instance Type by calling its parameterless constructor. When a more sophisticated build process is required, a Builder class can be specified to create the instance of the Instance Type.</description>
    <inlineHelpText>Specifies what builder to use: the standard builder or a custom builder.</inlineHelpText>
    <label>Builder To Use</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>