fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/ContractTypeName__c.field-meta.xml
<CustomField>
    <fullName>ContractTypeName__c</fullName>
    <inlineHelpText>Full class name of the contract type. Assure no other Instance Type Override has the same Contract Type Name in the same Instance Source Settings.</inlineHelpText>
    <label>Contract Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>