fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/CustomBuilderType__c.field-meta.xml
<CustomField>
    <fullName>CustomBuilderType__c</fullName>
    <inlineHelpText>Name of the class which instance has to be used to build instances for the contract type.</inlineHelpText>
    <label>Custom Builder Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>