fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/CustomPermissions__c.field-meta.xml
<CustomField>
    <fullName>CustomPermissions__c</fullName>
    <inlineHelpText>The Override will be applied to users who has all Custom Permissions listed in this field. When this field is blank, the override applies to all users, regardless their Custom Permissions.</inlineHelpText>
    <label>Custom Permissions</label>
    <type>TextArea</type>
</CustomField>