fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/InstanceSourceSettings__c.field-meta.xml
<CustomField>
    <fullName>InstanceSourceSettings__c</fullName>
    <description>Instance Source Settings the Instance Source Override applies to.</description>
    <label>Instance Source Settings</label>
    <referenceTo>InstanceSourceSettings__mdt</referenceTo>
    <relationshipLabel>Instance Type Overrides</relationshipLabel>
    <relationshipName>InstanceTypeOverrides</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>