fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/InstanceTypeName__c.field-meta.xml
<CustomField>
    <fullName>InstanceTypeName__c</fullName>
    <inlineHelpText>Specifies the class name that has to be used to create instances for the contract named in this Instance Source Override record.</inlineHelpText>
    <label>Instance Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>