fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Allow developers to quickly deactivate a n Instance Source Override without having to delete the settings.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>