fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/OverrideInheritedSharingImplementation__c.field-meta.xml
<CustomField>
    <fullName>OverrideInheritedSharingImplementation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this to use this Instance Source Override to override the creation of an Inherited Sharing instance for the specified Contract Type.</inlineHelpText>
    <label>Inherited Sharing</label>
    <type>Checkbox</type>
</CustomField>