fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/OverrideWithoutSharingImplementation__c.field-meta.xml
<CustomField>
    <fullName>OverrideWithoutSharingImplementation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this to use this Instance Source Override to override the creation of a Without Sharing instance for the specified Contract Type.</inlineHelpText>
    <label>Without Sharing</label>
    <type>Checkbox</type>
</CustomField>