fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/OverrideWithSharingImplementation__c.field-meta.xml
<CustomField>
    <fullName>OverrideWithSharingImplementation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this to use this Instance Source Override to override the creation of a With Sharing instance for the specified Contract Type.</inlineHelpText>
    <label>With Sharing</label>
    <type>Checkbox</type>
</CustomField>