fxp-app/main/default/objects/InstanceTypeOverride__mdt/fields/RequiredPermissions__c.field-meta.xml
<CustomField>
    <fullName>RequiredPermissions__c</fullName>
    <inlineHelpText>The Override will be applied to users who has all permissions listed in this field. When this field is blank, the override applies to all users, regardless their permissions.</inlineHelpText>
    <label>Required Permissions</label>
    <type>TextArea</type>
</CustomField>