fxp-app/main/default/objects/InstanceTypeOverride__mdt/validationRules/Custom_Builder_Type_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Builder_Type_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT( BuilderToUse__c ) = &quot;Custom&quot;,
ISBLANK( CustomBuilderType__c )
)</errorConditionFormula>
    <errorMessage>Custom Builder Type cannot be blank when Custom Builder is selected.</errorMessage>
</ValidationRule>