fxp-app/main/default/objects/InstanceTypeOverride__mdt/validationRules/Instance_Type_Override_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Instance_Type_Override_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT( BuilderToUse__c ) = &quot;Standard&quot;,
ISBLANK( InstanceTypeName__c )
)</errorConditionFormula>
    <errorMessage>Instance Type Name cannot be blank when Standard Builder is selected.</errorMessage>
</ValidationRule>