fxp-app/main/default/objects/InstanceTypeOverride__mdt/validationRules/One_Impl_Override_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>One_Impl_Override_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 IsActive__c,
 NOT( OverrideWithSharingImplementation__c ) ,
 NOT( OverrideWithoutSharingImplementation__c ) ,
 NOT( OverrideInheritedSharingImplementation__c ) 
)</errorConditionFormula>
    <errorMessage>An Active Instance Type Override must have at least one Override Implementation Option selected.</errorMessage>
</ValidationRule>